# avr-hal

./: .envrc  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  Xargo.toml  crates.js  flake.nix  help.html  makefile.rs  mkhex.sh  rust-toolchain.toml  search-index.js  settings.html  source-files.js  src-files.js
arduino-hal/: Cargo.toml
arduino-hal/src/: clock.rs  delay.rs  globals.rs  lib.rs  simple_pwm.rs
arduino-hal/src/adafruit/: mod.rs  trinket.rs  trinket_pro.rs
arduino-hal/src/arduino/: diecimila.rs  leonardo.rs  mega1280.rs  mega2560.rs  mod.rs  nano_v2.rs  nano_v3.rs  uno.rs
arduino-hal/src/arduino/impl/: mega.rs  mod.rs  uno.rs
arduino-hal/src/impl/: adc.rs  delay.rs  eeprom.rs  i2c.rs  mod.rs  simple_pwm.rs  spi.rs  usart.rs
arduino-hal/src/port/: attiny1614.rs  attiny402.rs  circuit_playground_classic.rs  diecimila.rs  digispark.rs  digispark_pro.rs  every.rs  feather_32u4.rs  feather_32u4_rfm.rs  kontrolir.rs  leonardo.rs  mega.rs  mega2560.rs  micro.rs  mod.rs  promicro.rs  trinket.rs  trinket_pro.rs  uno.rs
arduino-hal/src/sparkfun/: mod.rs  pro_micro.rs  pro_mini_3v3.rs  pro_mini_5v.rs
arduino-hal/src/time/: chrono.rs  macros.rs  mod.rs  piece.rs
arduino_hal/: all.html  attr.entry.html  fn.delay_ms.html  fn.delay_ns.html  fn.delay_us.html  index.html  macro.default_serial!.html  macro.default_serial.html  macro.pins!.html  macro.pins.html  sidebar-items.js  type.DefaultClock.html  type.Delay.html
atmega_hal/: all.html  index.html  macro.pins!.html  macro.pins.html  sidebar-items.js  (+2 more)
avr-hal-generic/: Cargo.toml  build.rs
avr-hal-generic/src/: adc.rs  clock.rs  delay.rs  eeprom.rs  ep.rs  i2c.rs  lib.rs  port.rs  pwm.rs  serial.rs  simple_pwm.rs  spi.rs  time.rs  usart.rs  usart_old.rs  usart_spi.rs  usb.rs  wdt.rs
boards/arduino-diecimila/: Cargo.toml  avr-atmega168.json
boards/arduino-diecimila/.cargo/: config.toml
boards/arduino-diecimila/examples/: diecimila-blink.rs  diecimila-panic.rs  diecimila-pwm.rs
boards/arduino-diecimila/src/: lib.rs  pins.rs
boards/arduino-leonardo/: Cargo.toml  Xargo.toml  leonardo-runner.sh
boards/arduino-leonardo/.cargo/: config.toml
boards/arduino-leonardo/examples/: leonardo-adc.rs  leonardo-blink.rs  leonardo-i2cdetect.rs  leonardo-interrupt.rs  leonardo-panic.rs  leonardo-pwm.rs  leonardo-serial.rs  leonardo-spi-feedback.rs  leonardo-watchdog.rs
boards/arduino-leonardo/src/: lib.rs  pins.rs
boards/arduino-mega2560/: Cargo.toml  avr-atmega2560.json  mega2560-runner.sh
boards/arduino-mega2560/.cargo/: config.toml
boards/arduino-mega2560/examples/: mega2560-adc.rs  mega2560-blink.rs  mega2560-i2cdetect.rs  mega2560-panic.rs  mega2560-pwm.rs  mega2560-serial.rs  mega2560-spi-feedback.rs
boards/arduino-mega2560/src/: lib.rs  pins.rs
boards/arduino-uno/: Cargo.toml  avr-atmega328p.json  uno-runner.sh
boards/arduino-uno/.cargo/: config.toml
boards/arduino-uno/examples/: uno-adc.rs  uno-blink.rs  uno-hc-sr04.rs  uno-i2cdetect.rs  uno-millis.rs  uno-panic.rs  uno-pwm.rs  uno-sensor.rs  uno-serial.rs  uno-spi-feedback.rs  uno-spi-poc.rs  uno-watchdog.rs
boards/arduino-uno/src/: lib.rs  pins.rs
boards/bigavr6/: Cargo.toml  avr-atmega1280.json
boards/bigavr6/examples/: bigavr6-blink.rs  bigavr6-i2cdetect.rs  bigavr6-panic.rs  bigavr6-serial.rs
boards/bigavr6/src/: lib.rs  pins.rs
boards/trinket/: Cargo.toml  avr-attiny85.json
boards/trinket-pro/: Cargo.toml  trinket-pro-runner.sh
boards/trinket-pro/.cargo/: config.toml
boards/trinket-pro/examples/: trinket-pro-blink.rs
boards/trinket-pro/src/: lib.rs  pins.rs
boards/trinket/.cargo/: config.toml
boards/trinket/examples/: trinket-blink.rs
boards/trinket/src/: lib.rs
chips/atmega1280-hal/: Cargo.toml  avr-atmega1280.json
chips/atmega1280-hal/.cargo/: config.toml
chips/atmega1280-hal/src/: lib.rs  port.rs  usart.rs
chips/atmega328p-hal/: Cargo.toml  avr-atmega328p.json
chips/atmega328p-hal/.cargo/: config.toml
chips/atmega328p-hal/src/: adc.rs  lib.rs  port.rs  pwm.rs  spi.rs  usart.rs  wdt.rs
chips/atmega328pb-hal/: Cargo.toml  avr-atmega328pb.json
chips/atmega328pb-hal/src/: adc.rs  lib.rs  port.rs  pwm.rs  wdt.rs
chips/atmega8u2-hal/: Cargo.toml
chips/atmega8u2-hal/src/: lib.rs  port.rs  pwm.rs  wdt.rs
chips/attiny85-hal/: Cargo.toml  avr-attiny85.json
chips/attiny85-hal/.cargo/: config.toml
chips/attiny85-hal/src/: lib.rs  port.rs
examples/arduino-leonardo/: Cargo.toml  Ravedude.toml
examples/arduino-leonardo/.cargo/: config.toml
examples/arduino-mega1280/: Cargo.toml  README.md  Ravedude.toml
examples/arduino-mega1280/.cargo/: config.toml
examples/arduino-mega2560/: Cargo.toml  Ravedude.toml
examples/arduino-mega2560/.cargo/: config.toml
examples/arduino-nano/: Cargo.toml  Ravedude.toml
examples/arduino-nano-every/: Cargo.toml
examples/arduino-nano-every/.cargo/: config.toml
examples/arduino-nano/.cargo/: config.toml
examples/arduino-uno/: Cargo.toml  Ravedude.toml
examples/arduino-uno/.cargo/: config.toml
examples/arduino-uno/src/: atomic.rs  lib.rs  sealed.rs  spsc.rs
examples/atmega2560/: Cargo.toml  README.md  Ravedude.toml
examples/attiny13a/: BREATHING_LED_README.md  Cargo.toml
examples/avr-butterfly/: Cargo.toml  Ravedude.toml
examples/avr-butterfly/.cargo/: config.toml
examples/avr-portable/: Cargo.toml
examples/avr-portable/src/: lib.rs
examples/avrmodern/: Cargo.toml  README.md  attiny402-flash.sh
examples/avrmodern/.cargo/: config.toml
examples/circuit-playground-classic/: Cargo.toml
examples/circuit-playground-classic/.cargo/: config.toml
examples/feather-32u4-rfm/: Cargo.toml  README.md
examples/feather-32u4-rfm/.cargo/: config.toml
ravedude/: CHANGELOG.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
ravedude/src/: board.rs  boards.toml  config.rs  console.rs  main.rs  target_detect.rs  ui.rs
ravedude/src/avrdude/: avrdude-6.conf  avrdude-7.conf  avrdude.conf  mod.rs
sparkfun-hal/: Cargo.toml
sparkfun-hal/src/: clock.rs  delay.rs  lib.rs
sparkfun-hal/src/port/: mod.rs  promicro.rs
(+9147 files in other folders)
