[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[workspace]
members = [
    # The generic hal definitions
    "avr-hal-generic",

    # MCU HAL crates
    "mcu/atmega-hal",
    "mcu/attiny-hal",
    "mcu/avrmodern-hal",

    # Higher level crates
    "arduino-hal",

    # Examples
    "examples/arduino-diecimila",
    "examples/arduino-leonardo",
    "examples/arduino-mega2560",
    "examples/arduino-mega1280",
    "examples/arduino-nano",
    "examples/arduino-uno",
    "examples/atmega2560",
    "examples/nano168",
    "examples/sparkfun-promicro",
    "examples/sparkfun-promini-3v3",
    "examples/sparkfun-promini-5v",
    "examples/trinket-pro",
    "examples/trinket",
    "examples/avrmodern",
]
exclude = [
    # The RAVEDUDE! Yeah!
    "ravedude",
]
resolver = "2"

[patch.crates-io]
avr-device = { git = "https://github.com/rahix/avr-device", rev = "330cdf1fb1a7301b9d6cf62491c16e69d6aa7312" }
