[package]
name = "arduino-hal"
version = "0.1.0"
authors = ["Rahix <rahix@rahix.de>"]
edition = "2018"

[features]
default = ["rt"]
rt = ["avr-device/rt"]

board-selected = []
mcu-atmega=[]
mcu-attiny=[]
arduino-diecimila = ["mcu-atmega", "atmega-hal/atmega168", "board-selected"]
arduino-leonardo = ["mcu-atmega", "atmega-hal/atmega32u4", "board-selected"]
arduino-mega2560 = ["mcu-atmega", "atmega-hal/atmega2560", "board-selected"]
arduino-mega1280 = ["mcu-atmega", "atmega-hal/atmega1280", "board-selected"]
arduino-nano = ["mcu-atmega", "atmega-hal/atmega328p", "atmega-hal/enable-extra-adc", "board-selected"]
arduino-uno = ["mcu-atmega", "atmega-hal/atmega328p", "board-selected"]
trinket-pro = ["mcu-atmega", "atmega-hal/atmega328p", "board-selected"]
sparkfun-promicro = ["mcu-atmega", "atmega-hal/atmega32u4", "board-selected"]
trinket = ["mcu-attiny", "attiny-hal/attiny85", "board-selected"]
digispark = ["mcu-attiny", "attiny-hal/attiny85", "board-selected"]
nano168 = ["mcu-atmega", "atmega-hal/atmega168", "atmega-hal/enable-extra-adc", "board-selected"]

[dependencies]
cfg-if = "1"
embedded-hal = "0.2.3"
ufmt = "0.1.0"

[dependencies.void]
version = "1.0.2"
default-features = false

[dependencies.avr-hal-generic]
path = "../avr-hal-generic/"

[dependencies.atmega-hal]
path = "../mcu/atmega-hal/"
optional = true

# Because this crate has its own check that at least one device is selected, we
# can safely "circumvent" the check in `atmega-hal`.  Due to compile order,
# this allows us to show our error instead of the one from `atmega-hal` (which
# is much less helpful in this situation).
features = ["disable-device-selection-error"]

[dependencies.attiny-hal]
path = "../mcu/attiny-hal/"
optional = true

[dependencies.avr-device]
version = "0.4"

# Because this crate has its own check that at least one device is selected, we
# can safely "circumvent" the check in `avr-device`.
#
# Why would we want that?  Otherwise, as `avr-device` is compiled first, its
# error will be shown and ours won't which leads to a degraded user experience
# as the displayed error message does not really tell what needs to be done...
features = ["device-selected"]
