[package]
name = "arduino-hal"
version = "0.4.0"

authors = ["Rahix <rahix@rahix.de>"]
edition = "2021"
description = "Board support crate for popular AVR dev-boards"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rahix/avr-hal"
keywords = ["avr", "arduino"]
categories = ["no-std", "embedded", "hardware-support"]

[features]
default = ["rt"]
rt = ["avr-device/rt"]

critical-section-impl = ["avr-device/critical-section-impl"]

# Board-specific targets. 
arduino-diecimila = ["_board-arduino-diecimila"]
arduino-leonardo = ["_board-arduino-leonardo"]
arduino-mega2560 = ["_board-arduino-mega2560"]
arduino-mega1280 = ["_board-arduino-mega1280"]
arduino-nano = ["_board-arduino-nano"]
arduino-uno = ["_board-arduino-uno"]
trinket-pro = ["_board-trinket-pro"]
sparkfun-promicro = ["_board-sparkfun-promicro"]
sparkfun-promini-3v3 = ["_board-sparkfun-promini-3v3"]
sparkfun-promini-5v = ["_board-sparkfun-promini-5v"]
trinket = ["_board-trinket"]
nano168 = ["_board-nano168"]

# When using this crate from another lib crate, you can use this feature to suppress the chip selection error in favor of your own error
disable-board-selection-error = ["_board-selected"]

# MCU-specific implementation features
_board-arduino-diecimila = ["_mcu-atmega", "_default-serial", "atmega-hal/atmega168"]
_board-arduino-leonardo = ["_mcu-atmega", "_default-serial", "atmega-hal/atmega32u4"]
_board-arduino-mega2560 = ["_mcu-atmega", "_default-serial", "atmega-hal/atmega2560"]
_board-arduino-mega1280 = ["_mcu-atmega", "_default-serial", "atmega-hal/atmega1280"]
_board-arduino-nano = ["_mcu-atmega", "_default-serial", "atmega-hal/atmega328p", "atmega-hal/enable-extra-adc"]
_board-arduino-uno = ["_mcu-atmega", "_default-serial", "atmega-hal/atmega328p"]
_board-trinket-pro = ["_mcu-atmega", "_default-serial", "atmega-hal/atmega328p"]
_board-sparkfun-promicro = ["_mcu-atmega", "_default-serial", "atmega-hal/atmega32u4"]
_board-sparkfun-promini-3v3 = ["_mcu-atmega", "_default-serial", "atmega-hal/atmega328p", "atmega-hal/enable-extra-adc"]
_board-sparkfun-promini-5v = ["_mcu-atmega", "_default-serial", "atmega-hal/atmega328p", "atmega-hal/enable-extra-adc"]
_board-trinket = ["_mcu-attiny", "attiny-hal/attiny85"]
_board-nano168 = ["_mcu-atmega", "atmega-hal/atmega168", "atmega-hal/enable-extra-adc"]

_mcu-atmega = ["_board-selected"]
_mcu-attiny = ["_board-selected"]
_default-serial = []

_board-selected = []

docsrs = [
    "arduino-diecimila",
    "arduino-leonardo",
    "arduino-mega2560",
    "arduino-mega1280",
    "arduino-nano",
    "arduino-uno",
    "trinket-pro",
    "sparkfun-promicro",
    "sparkfun-promini-3v3",
    "sparkfun-promini-5v",
    "trinket",
    "nano168",
]

[dependencies]
cfg-if = "1"
embedded-hal = "1.0"
ufmt = "0.2.0"

[dependencies.embedded-hal-v0]
version = "0.2.3"
package = "embedded-hal"

[dependencies.avr-hal-generic]
path = "../avr-hal-generic/"

[dependencies.atmega-hal]
path = "../mcu/atmega-hal/"
optional = true

[dependencies.attiny-hal]
path = "../mcu/attiny-hal/"
optional = true

[dependencies.avr-device]
version = "0.5.4"

# Because this crate has its own check that at least one device is selected, we
# can safely "circumvent" the check in `avr-device`.
#
# Why would we want that?  Otherwise, as `avr-device` is compiled first, its
# error will be shown and ours won't which leads to a degraded user experience
# as the displayed error message does not really tell what needs to be done...
features = ["device-selected"]

[package.metadata.docs.rs]
features = ["docsrs"]
