[package]
name = "avr-hal-generic"
version = "0.1.0"
authors = ["Rahix <rahix@rahix.de>"]
edition = "2018"

[dependencies]
cfg-if = "0.1.7"
nb = "0.1.2"
ufmt = "0.2.0"
paste = "1.0.0"
avr-device = "0.5.3"
embedded-storage = "0.3"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.void]
version = "1.0.2"
default-features = false

[build-dependencies]
rustversion = "1.0"
