[package]
name = "avr-hal-generic"
version = "0.1.0"
authors = ["Rahix <rahix@rahix.de>"]
edition = "2021"

[dependencies]
cfg-if = "0.1.7"
nb = "1.1.0"
ufmt = "0.2.0"
paste = "1.0.0"
avr-device = "0.5.4"
embedded-storage = "0.2"
embedded-hal = "1.0"
embedded-io = "0.6.1"
unwrap-infallible = "0.1.5"

[dependencies.embedded-hal-v0]
version = "0.2.3"
package = "embedded-hal"
features = ["unproven"]

[build-dependencies]
rustversion = "1.0"
