[package]
name = "avr-hal-generic"
version = "0.1.0"

authors = ["Rahix <rahix@rahix.de>"]
edition = "2021"
description = "MCU-generic meta-HAL crate for AVR microcontrollers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rahix/avr-hal"
keywords = ["avr", "arduino"]
categories = ["no-std", "embedded", "hardware-support"]

[package.metadata.docs.rs]
features = ["docsrs"]

[features]
docsrs = ["avr-device/docsrs"]

[dependencies]
nb = "1.1.0"
ufmt = "0.2.0"
paste = "1.0.0"
avr-device = "0.7"
embedded-storage = "0.2"
embedded-hal = "1.0"
embedded-hal-bus = "0.1"
unwrap-infallible = "0.1.5"

[dependencies.embedded-hal-v0]
version = "0.2.3"
package = "embedded-hal"
features = ["unproven"]
