[package]
name = "sparkfun-hal"
version = "0.1.0"
authors = ["Rahix <rahix@rahix.de>"]
edition = "2018"

[features]
default = ["rt"]
rt = ["atmega-hal/rt"]

board-selected = []
mcu-atmega=[]
sparkfun-promicro = ["mcu-atmega", "atmega-hal/atmega32u4", "board-selected"]

[dependencies]
cfg-if = "1"
embedded-hal = "0.2.3"
ufmt = "0.1.0"

[dependencies.void]
version = "1.0.2"
default-features = false

[dependencies.avr-hal-generic]
path = "../avr-hal-generic/"

[dependencies.atmega-hal]
path = "../mcu/atmega-hal/"
optional = true

# Because this crate has its own check that at least one device is selected, we
# can safely "circumvent" the check in `atmega-hal`.  Due to compile order,
# this allows us to show our error instead of the one from `atmega-hal` (which
# is much less helpful in this situation).
features = ["disable-device-selection-error"]

[dependencies.avr-device]
version = "0.3"
