[package]
name = "arduino-leonardo"
version = "0.1.0"
authors = ["Rahix <rahix@rahix.de>"]
edition = "2018"

[features]
default = ["rt"]
rt = ["atmega32u4-hal/rt"]

[dependencies]
atmega32u4-hal = { path = "../../chips/atmega32u4-hal/" }
avr-hal-generic = { path = "../../avr-hal-generic/" }

[dev-dependencies]
panic-halt = "0.2.0"
nb = "0.1.2"
ufmt = "0.1.0"
avr-device = "0.3"
