[package]
name = "arduino-mega2560"
version = "0.1.0"
authors = ["Andrew Dona-Couch <avr-hal@couchand.com>"]
edition = "2018"

[features]
default = ["rt"]
rt = ["atmega2560-hal/rt"]

[dependencies]
atmega2560-hal = { path = "../../chips/atmega2560-hal/" }
avr-hal-generic = { path = "../../avr-hal-generic/" }

[dev-dependencies]
panic-halt = "0.2.0"
nb = "0.1.2"
ufmt = "0.1.0"
