[package]
name = "trinket"
version = "0.1.0"
authors = ["Rahix <rahix@rahix.de>"]
edition = "2018"

[features]
default = ["rt"]
rt = ["attiny85-hal/rt"]

[dependencies]
avr-hal-generic = { path = "../../avr-hal-generic/" }
attiny85-hal = { path = "../../chips/attiny85-hal/" }

[dev-dependencies]
panic-halt = "0.2.0"
