[package]
name = "atmega1280-hal"
version = "0.1.0"
authors = ["Gabriel Pickl <peacememories@posteo.net>"]
edition = "2018"

[features]
rt = ["avr-device/rt"]

[dependencies]
avr-hal-generic = { path = "../../avr-hal-generic/" }

[dependencies.avr-device]
version = "0.2.2"
features = ["atmega1280"]
