[package]
name = "atmega328pb-hal"
version = "0.1.0"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2018"

[features]
rt = ["avr-device/rt"]
# Package exposes the ADC6 and ADC7 pins (only 32TQFP, 32MLF, 32UFBGA)
adc-pins = []

[dependencies]
avr-hal-generic = { path = "../../avr-hal-generic/" }

[dependencies.avr-device]
path = "../../../avr-device"
#version = "0.2.2"
features = ["atmega328pb"]
