[package]
name = "attiny85-hal"
version = "0.1.0"
authors = ["Rahix <rahix@rahix.de>"]
edition = "2018"

[dependencies]
avr-hal-generic = { path = "../../avr-hal-generic/" }

[dependencies.avr-device]
# git = "https://github.com/Rahix/avr-device"
path = "../../../avr-device"
features = ["attiny85"]
