[package]
name = "arduino-mega1280-examples"
version = "0.0.0"
authors = ["Rahix <rahix@rahix.de>"]
edition = "2018"
publish = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0.0-rc.3"

[dependencies.embedded-hal-v0]
version = "0.2.3"
package = "embedded-hal"

[dependencies.arduino-hal]
path = "../../arduino-hal/"
features = ["arduino-mega1280"]