[package]
name = "arduino-mega2560-examples"
version = "0.0.0"
authors = ["Rahix <rahix@rahix.de>"]
edition = "2018"
publish = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "0.2.3"

[dependencies.arduino-hal]
path = "../../arduino-hal/"
features = ["arduino-mega2560"]