[package]
name = "arduino-nano-every-examples"
version = "0.0.0"
authors = ["Rahix <rahix@rahix.de>"]
edition = "2018"
publish = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"

[dependencies.atxmega-hal]
path = "../../mcu/atxmega-hal/"
features = ["atmega4809", "rt"]
