[package]
name = "arduino-nano-examples"
version = "0.0.0"
authors = ["David R. Morrison <drmorr@evokewonder.com>"]
edition = "2018"
publish = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "0.2.3"

[dependencies.arduino-hal]
path = "../../arduino-hal/"
features = ["arduino-nano"]

[dependencies.avr-device]
version = "0.5.1"
