[package]
name = "arduino-nano-examples"
version = "0.0.0"
authors = ["David R. Morrison <drmorr@evokewonder.com>"]
edition = "2021"
publish = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"

[dependencies.embedded-hal-v0]
version = "0.2.3"
package = "embedded-hal"

[dependencies.arduino-hal]
path = "../../arduino-hal/"
features = ["arduino-nano"]

[dependencies.avr-device]
version = "0.8.1"
