[package]
name = "arduino-uno-examples"
version = "0.0.0"
authors = ["Rahix <rahix@rahix.de>"]
edition = "2018"
publish = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
pwm-pca9685 = "0.3.1"
infrared = "0.14.1"
embedded-storage = "0.2"

[dependencies.arduino-hal]
path = "../../arduino-hal/"
features = ["arduino-uno"]

[dependencies.avr-device]
version = "0.5.1"

[dependencies.either]
version = "1.6.1"
default-features = false

[dependencies.avr-portable]
path = "../avr-portable"

[dependencies.void]
version = "*"
default-features = false
