[package]
name = "arduino-uno-examples"
version = "0.0.0"
authors = ["Rahix <rahix@rahix.de>"]
edition = "2021"
publish = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"
pwm-pca9685 = "1.0.0"
infrared = "0.14.1"
embedded-storage = "0.2"

[dependencies.embedded-hal-v0]
version = "0.2.3"
package = "embedded-hal"

[dependencies.arduino-hal]
path = "../../arduino-hal/"
features = ["arduino-uno"]

[dependencies.avr-device]
version = "0.7"

[dependencies.either]
version = "1.6.1"
default-features = false

# The latest releases of `proc-macro2` do not support the rust toolchain that
# we use.  Thus, we must fix this dependency to an older version where our
# toolchain is still supported.  See https://github.com/Rahix/avr-hal/issues/537
[build-dependencies.proc-macro2]
version = "=1.0.93"
