[package]
name = "arduino-uno-examples"
version = "0.0.0"
authors = ["Rahix <rahix@rahix.de>"]
edition = "2021"
publish = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"
pwm-pca9685 = "1.0.0"
infrared = "0.14.1"
embedded-storage = "0.2"

[dependencies.arduino-hal]
path = "../../arduino-hal/"
features = ["arduino-uno"]

[dependencies.avr-device]
version = "0.8.1"

[dependencies.either]
version = "1.6.1"
default-features = false
