[package]
name = "atmega2560-examples"
version = "0.0.0"
authors = ["Rahix <rahix@rahix.de>", "Armandas Jarušauskas <jarusauskas@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"
avr-device = { version = "0.7", features = ["rt"] }

[dependencies.embedded-hal-v0]
version = "0.2.3"
package = "embedded-hal"

[dependencies.atmega-hal]
path = "../../mcu/atmega-hal/"
features = ["atmega2560"]

# The latest releases of `proc-macro2` do not support the rust toolchain that
# we use.  Thus, we must fix this dependency to an older version where our
# toolchain is still supported.  See https://github.com/Rahix/avr-hal/issues/537
[build-dependencies.proc-macro2]
version = "=1.0.94"
