[package]
name = "attiny13a-examples"
version = "0.0.0"
authors = ["Rahix <rahix@rahix.de>"]
edition = "2021"
publish = false

[dependencies]
panic-halt = "1.0.0"
embedded-hal = "1.0"
avr-progmem = "0.4.0"

[dependencies.embedded-hal-v0]
version = "0.2.3"
package = "embedded-hal"

[dependencies.attiny-hal]
path = "../../mcu/attiny-hal/"
features = ["attiny13a", "rt"]
