[package]
name = "circuit-playground-classic-examples"
version = "0.0.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2018"
publish = false

[dependencies]
panic-halt = "0.2.0"
embedded-hal = "0.2.3"

[dependencies.arduino-hal]
path = "../../arduino-hal"
features = ["circuit-playground-classic"]
